--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Live for leave, your entire life.
+title: 欢迎光临LFL.
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Floin!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>The <em>very first page</em> for this blog. <a href="/about">Read more about this blog...</a></p>
 </div><!-- /.blurb -->
