--- a/curio/index.html
+++ b/curio/index.html
@@ -7,5 +7,5 @@ title: 关于Curio.
 	<h2>curio</h2>
 	<h3>noun (plural) -rios<h3>
 	<p>a small article valued as a collector's item, esp something fascinating or unusual</p>
-	<p>ORIGINC19: shortened from curiosity</p>
+	<p id="dictsource">ORIGINC19: shortened from curiosity</p>
 </div>
